fixed up container in mobile collapse nav

--- a/src/components/Header/NavLeftCollapse.module.css
+++ b/src/components/Header/NavLeftCollapse.module.css
@@ -21,7 +21,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 0 2rem;
+  margin: 0 2rem 0 4rem;
   min-height: 100vh;
 }
 
@@ -66,6 +66,12 @@
 @media (max-width: 900px) {
   .header {
     margin-top: 0.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    margin: 0 2rem;
   }
 }
 @media (max-width: 480px) {
